--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,12 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+/* sets paper background image for whole app */
 #root {
   background-image: url("https://i.imgur.com/xYy56Rs.png");
   background-repeat: repeat-y;
-  /* background-size: cover; */
-  /* background-blend-mode: lighten; */
   background-attachment: scroll;
   min-height: 100vh;
 }
